# geomagindices

./: .appveyor.yml  .flake8  .travis.yml  GeomagIndices.py  LICENSE.txt  MANIFEST.in  PlotIndices.py  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql.yml
Examples/: PlotIndices.py
geomagindices/: __init__.py  base.py  io.py  web.py
geomagindices/data/: May2016Rpt.txt
geomagindices/tests/: test_read.py
src/geomagdata/: __init__.py  base.py  web.py
src/geomagdata/tests/: test_read.py
src/geomagindices/: __init__.py  __main__.py  base.py  io.py  utils.py  web.py
src/geomagindices/data/: __init__.py
src/geomagindices/tests/: test_read.py
tests/: test_read.py
