[metadata]
name = geomagindices
version = 1.3.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Download and parse geomagnetic indices
url = https://github.com/space-physics/geomagindices
keywords =
  aeronomy
  aurora
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  python-dateutil
  requests
  numpy
  pandas >= 0.23.0
package_dir=
  =src

[options.packages.find]
  where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib

[options.entry_points]
console_scripts =
  geomagindices = geomagindices.__main__:cli
